feat(summary): send title as project if project_id is present

--- a/app/views/time/show.html.erb
+++ b/app/views/time/show.html.erb
@@ -1,7 +1,7 @@
 <% if @error_message %>
   <p><%= @error_message %>
 <% else %>
-  <h1 class="my-4 text-3xl text-center"><%= @client%></h1>
+  <h1 class="my-4 text-3xl text-center"><%= @title%></h1>
 
   <table class="w-5/6 m-5 mx-auto text-gray-800 bg-gray-200 rounded-t-lg">
     <tr class="text-left border-b-2 border-gray-300">
